--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Jonas Lopes de Almeida",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "date-fns": "^2.16.1",
     "express": "^4.17.1",
     "mongoose": "^5.11.14"
